--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'Z'
 - !lcsh 'English language -- Punctuation'
+- GITenberg
 title: "Punctuation\r\nA Primer of Information about the Marks of Punctuation and\
   \ their Use Both Grammatically and Typographically"
 url: http://www.gutenberg.org/ebooks/20787
